More alignment fixes

--- a/frontend/src/css/IndividualResultRow.css
+++ b/frontend/src/css/IndividualResultRow.css
@@ -132,7 +132,7 @@
   }
 
 /* Mobile View */ 
-@media only screen and (max-width: 550px){
+@media only screen and (max-width: 600px){
 
     .Content{
         flex-direction: column;
